--- a/src/wzL/NJFrm.form
+++ b/src/wzL/NJFrm.form
@@ -557,9 +557,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="DejaVu Sans" size="10" style="0"/>
                 </Property>
-                <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new SpinnerListModel(obj.profilelist())&#xa;    " type="code"/>
-                </Property>
+                <Property name="model" preCode="jSpinner1.setModel(new SpinnerListModel(obj.profilelist()));"/>
               </Properties>
               <Events>
                 <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="MprofileChanged"/>
@@ -989,7 +987,7 @@
                           <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="127" max="32767" attributes="0"/>
+                      <EmptySpace pref="111" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1007,7 +1005,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Droid Sans" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt; This launcher made by Kaynix for warzone2100 players to make online play more comfortable.&lt;br&gt; If you have any suggestions/improvments or found bug contact me kaynix29@gmail.com or at forum pm to &lt;b&gt;Terminator&lt;/b&gt; &lt;br&gt; Warzone2100 Launcher version alpha 0.15c**:&lt;br&gt; - added profiles&lt;br&gt; - added delete mod button&lt;br&gt; - added delete map button&lt;br&gt; - preparing ladder background&lt;br&gt; - improved mods management&lt;br&gt; - improved maps management&lt;br&gt; - enabled launching game from campaign Alpha,Beta,Gamma&lt;br&gt; - enabled fullscreen/resolution changer(direct writing to config file)&lt;br&gt; - bug fixes&lt;br&gt;*- add browse buttons for game exe and config folder&lt;br&gt; *- fixed issue with game exe and config folder&lt;br&gt;*- make use java preferences(location platform dependent)&lt;br&gt;**- fixed Java security issues&lt;br&gt;**- fixed folder relocation errors, so mods\u005cmaps should work again&lt;br&gt;&lt;br&gt;&lt;p&gt;run launcher in terminal to see logs.&lt;/p&gt; &lt;br&gt;  &lt;p&gt;For more info visit wz2100.net or warzone2100.org.ua &lt;/p&gt; &lt;br&gt; &lt;p&gt;source code: &lt;a href=&apos;github.com/kaynix/wzL&apos;&gt;github.com/kaynix/wzL&lt;/a&gt;&lt;/p&gt; &lt;/html&gt;" noResource="true" containsInvalidXMLChars="true"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt; This launcher made by Kaynix for warzone2100 players to make online play more comfortable.&lt;br&gt; If you have any suggestions/improvments or found bug contact me kaynix29@gmail.com or at forum pm to &lt;b&gt;Terminator&lt;/b&gt; &lt;br&gt; Warzone2100 Launcher version alpha 0.15d**:&lt;br&gt; - added profiles&lt;br&gt; - added delete mod button&lt;br&gt; - added delete map button&lt;br&gt; - preparing ladder background&lt;br&gt; - improved mods management&lt;br&gt; - improved maps management&lt;br&gt; - enabled launching game from campaign Alpha,Beta,Gamma&lt;br&gt; - enabled fullscreen/resolution changer(direct writing to config file)&lt;br&gt; - bug fixes&lt;br&gt;*- add browse buttons for game exe and config folder&lt;br&gt; *- fixed issue with game exe and config folder&lt;br&gt;*- make use java preferences(location platform dependent)&lt;br&gt;**- fixed Java security issues&lt;br&gt;**- fixed folder relocation errors, so mods\u005cmaps should work again&lt;br&gt;**- fixed profiles empty folder bug&lt;br&gt;&lt;br&gt;&lt;p&gt;run launcher in terminal to see logs.&lt;/p&gt; &lt;br&gt;  &lt;p&gt;For more info visit wz2100.net&lt;/p&gt; &lt;br&gt; &lt;p&gt;source code: &lt;a href=&apos;github.com/kaynix/wzL&apos;&gt;github.com/kaynix/wzL&lt;/a&gt;&lt;/p&gt; &lt;/html&gt;" noResource="true" containsInvalidXMLChars="true"/>
                 <Property name="verticalAlignment" type="int" value="1"/>
               </Properties>
             </Component>
